--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ aiosqlite
 sqlalchemy
 watchfiles
 ruamel.yaml
-httpx[http2]
+httpx[defaults]
 httpx-socks==0.9.2
 cryptography==43.0.3
 python-multipart
