Update requirements.txt for resolve Cloudflare deployment errors

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,8 @@ aiosqlite
 sqlalchemy
 watchfiles
 ruamel.yaml
-httpx[defaults]
+httpx
+h2
 httpx-socks==0.9.2
 cryptography==43.0.3
 python-multipart
